# shooter-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config  linker
client/: Cargo.toml  font.fnt  win.sh
client/src/: allegro_renderer.rs  game.rs  main.rs  net.rs
client/src/entities/: mod.rs  ship.rs
client/src/game/: handler.rs  mod.rs  runnable.rs
client/src/game/views/: connect.rs  game.rs  init.rs  menu.rs  mod.rs
client/src/level/: mod.rs
client/src/renderer/: allegro.rs  mod.rs  particle.rs  particle_system.rs
client/src/renderer/allegro/: mod.rs  particle_system.rs  traits.rs
client/src/renderer/glium/: font.rs  mod.rs  particle_system.rs  traits.rs
lithium/: Cargo.toml
lithium-rs/: Cargo.toml
lithium-rs/src/: client.rs  event.rs  idpool.rs  lib.rs  network.rs  renderer.rs  server.rs  timer.rs
lithium-rs/src/entity/: entity.rs  event.rs  mod.rs  traits.rs
lithium-rs/src/entity/manager/: config.rs  mod.rs  registry.rs
lithium-rs/src/level/: mod.rs  traits.rs
lithium/src/: client.rs  event.rs  idpool.rs  level.rs  lib.rs  network.rs  renderer.rs  runnable.rs  server.rs  util.rs
lithium/src/entity/: control.rs  entity.rs  event.rs  mod.rs  state.rs  traits.rs
lithium/src/entity/manager/: config.rs  mod.rs  registry.rs
lithium/src/level/: mod.rs  traits.rs
server/: Cargo.toml
server/src/: game.rs  lib.rs  main.rs
server/src/game/: handler.rs  mod.rs
shared/: Cargo.toml
shared/src/: arena.rs  color.rs  command.rs  drawable.rs  entity.rs  event.rs  level.rs  lib.rs  particle.rs  renderer.rs  state.rs  util.rs
shared/src/entities/: mod.rs  ship.rs
shared/src/entity/: entity.rs  input.rs  kind.rs  mod.rs  state.rs  traits.rs
shared/src/level/: mod.rs  traits.rs
src/: color.rs  main.rs  particle.rs  ship.rs
src/client/: game.rs  main.rs  net.rs
src/server/: game.rs  main.rs
src/shared/: arena.rs  color.rs  drawable.rs  entity.rs  lib.rs  particle.rs  ship.rs  util.rs
src/shared/entities/ship/: mod.rs
