[package]
name = "allegro"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]

[dependencies]
rand = "*"
allegro = "0.0.18"
allegro-sys = "0.0.18"
allegro_primitives = "0.0.18"
allegro_font = "0.0.18"
clap = "1.4.0"

[dependencies.cobalt]
version = "0.4.0"
path = "../cobalt"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "shared"
path = "src/shared/lib.rs"

