[package]
name = "allegro"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]

[dependencies]
rand = "*"
allegro = "0.0.22"
allegro-sys = "0.0.22"
allegro_primitives = "0.0.22"
allegro_font = "0.0.22"
clap = "1.4.0"
cobalt = "0.5.0"
clock_ticks = "0.0.6"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "shared"
path = "src/shared/lib.rs"

